2013-03-14  Junichi Satoh  <junichi@rworks.jp>
	
       * include/help/ja/help_history_database.php: Added a new help file.

2013-03-13  Ramon Novoa  <rnovoa@artica.es>

	* godmode/servers/modificar_server.php: Let an Enterprise SNMP server
	  claim back modules that were moved to the Network server.

2013-03-13 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_modules.php: fixed the notices PHP.
	
	Fixes: #3607807

2013-03-13 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_modules.php: fixed the massive deletion of
	modules when only delete one module, the old code deleted all
	modules in the agents on operation.
	
	* godmode/massive/massive_delete_modules.php: cleaned source code
	style.

2013-03-13  Kikuchi Koichiro <koichiro@rworks.jp>

	* extensions/update_manager/lib/functions.ajax.php: Added proxy
	 and bsdtar support.

	Merged from: branch_4.0

2013-03-13  Kikuchi Koichiro <koichiro@rworks.jp>

	* extensions/update_manager/lib/xmlrpc/xmlrpc.inc: Keep original
	 connection params when xmlrpc_client->sendPayloadHTTP10() follows
	 30x redirect.

	Merged from: branch_4.0

2013-03-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/modules/manage_network_components_form.php,
	godmode/modules/manage_network_templates_form.php: improved the code
	style.
	
	* extensions/update_manager/lib/functions.ajax.php,
	include/graphs/functions_flot.php: fixed the warnings PHP messages.
	
	Fixes: #3607177

2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager/lib/functions.ajax.php: disabled the
	trace.
	
	* operation/agentes/ver_agente.php: fixed the output of modules
	when the names is very large.
	
	Fixes: #3607080
	
	* godmode/agentes/module_manager.php: cleaned source code style.

2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_config.php: fixed PHP notices when the "homeurl"
	is empty in some installations.

2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
	