@@ -447,7 +447,7 @@ if (count($usr_groups) > 1) {
 	}
 }
 
-$table->data[11][0] = __('Interactive charts');
+$table->data[11][0] = __('Interactive charts'). ' ' .ui_print_help_tip(__('Whether to use Javascript or static PNG graphs'), true) ;
 $values = array(-1 => __('Use global conf'), 1 => __('Yes'), 0 => __('No'));
 $table->data[11][1] = html_print_select($values, 'flash_charts', $user_info["flash_chart"], '', '', -1, true, false, false); 
 $table->data[12][0] = __('Block size for pagination');
