@@ -7,3 +7,63 @@
 <h1>Profile</h1>
 
 <p>Pandora FMS is a Web management tool that allows multiple users to work with different permissions in multiple defined agent groups. The permissions an user can have are defined in profiles.</p>
+
+<p>The following list defines what ACL control allows in each feature at the console:</p>
+
+<table cellpadding=4 cellspacing=0 style='background-color: #f0f0f0; border: 1px solid #acacac'>
+<tr><th style='background-color: #cacaca'>Feature<Th  style='background-color: #cacaca'>ACL Control 
+
+<tr><td>View agent data (all tabs)<td>AR
+<tr><td>Tactical view<td>AR
+<tr><td>Network map view<td>AR
+<tr><td>Group view<td>AR
+<tr><td>Visual console edition<td>RW
+<tr><td>Create report<td>RW
+<tr><td>Create user custom-defined graph<td>RW
+<tr><td>View report, visual map and/or custom graph<td>RR
+<tr><td>Apply report template<td>RW
+<tr><td>Create report template<td>RM
+<tr><td>Create incident<td>IW
+<tr><td>Read incident<td>IR
+<tr><td>Delete Incident<td>IW
+<tr><td>Become owner of another incident<td>IM
+<tr><td>Delete incident of another user<td>IM
+<tr><td>View event<td>ER
+<tr><td>Validate/Comment event<td>EW
+<tr><td>Delete event<td>EW
+<tr><td>Execute response<td>EW
+<tr><td>Create incident from event (Response)<td>EW&IW
+<tr><td>Change owner/Re-open event<td>EM
+<tr><td>View user<td>AR
+<tr><td>SNMP Console view<td>AR
+<tr><td>Validate traps<td>IW
+<tr><td>Message<td>IW
+<tr><td>Cron jobs	<td>PM
+<tr><td>Tree view	<td>AR
+<tr><td>Update manager (Operation & Admin)	<td>PM
+<tr><td>Extension Module Group<td>AR
+<tr><td>Agent management<td>AW
+<tr><td>Remote agent configuration management <td>AW
+<tr><td>Assign alerts to agents<td>LW
+<tr><td>Define, alter and delete alert templates, actions and commands<td>LM
+<tr><td>Group management<td>PM
+<tr><td>Create inventory modules<td>PM
+<tr><td>Module management (includes all suboptions)<td>PM
+<tr><td>Massive management operations	<td>AW
+<tr><td>Create agent<td>AW
+<tr><td>Duplicate remote configurations<td>AW
+<tr><td>Downtime management<td>AW
+<tr><td>Alert management<td>AM
+<tr><td>User management<td>UM
+<tr><td>SNMP Console management (alerts and MIB load)<td>PM
+<tr><td>Profile management<td>PM
+<tr><td>Server management<td>PM
+<tr><td>System audit<td>PM
+<tr><td>Setup<td>PM
+<tr><td>Database maintance<td>DM
+<tr><td>Administrator extension menu<td>PM
+<tr><td>Search bar<td>AR
+<tr><td>Policy management<td>AW
+<tr><td>Disable agent/module/alert<td>AD
+
+</table>
